# rendarar

./: .gitignore  Cargo.toml  README.md  TODO.md
common/: Cargo.toml
playground/: Cargo.toml
playground/src/: game.rs  main.rs  triangle.rs
playground/src/camera/: first_person.rs
renderer/: Cargo.toml
renderer/src/: game.rs  lib.rs
renderer/src/camera/: camera3d.rs  mod.rs  projection.rs  uniform.rs  utils.rs
renderer/src/wgpu/: buffer.rs  context.rs  error.rs  mod.rs  pipeline.rs  shader.rs  texture.rs
renderer/src/wgpu/uniform/: global.rs  mod.rs
resources/shaders/: simple_triangle.wgsl
resources/shaders/common/: globals.wgsl
