[package]
name = "playground"
version = "0.0.0"
authors = ["Sebbl0508"]
edition = "2021"
license = "MIT"

[dependencies]
common = { path = "../common" }
env_logger = "0.10.0"
log = "0.4.17"
renderer = { path = "../renderer" }
wgpu = "0.16.0"
winit = "0.28.5"
beul = "1.0.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
cgmath = "0.18.0"
