[package]
name = "playground"
version = "0.0.0"
authors = ["Sebbl0508"]
edition = "2021"
license = "MIT"

[dependencies]
common = { path = "../common" }
env_logger = "0.10.0"
renderer = { path = "../renderer" }
beul = "1.0.0"
cgmath = "0.18.0"
log = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
