[package]
name = "renderer"
version = "0.0.0"
authors = ["Sebbl0508"]
edition = "2021"
license = "MIT"

[dependencies]
cgmath = "0.18.0"
thiserror = "1.0.40"
image = "0.24.6"
log = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }

common = { path = "../common" }
